--- a/style.css
+++ b/style.css
@@ -252,3 +252,47 @@ input[name=faq-item]:checked + label + .faq-content {
 input[name=faq-item]:checked + label span {
   transform: rotate(45deg);
 }
+
+/* footer */
+footer {
+  padding: 50px 0;
+  font-size: 12px;
+  color: #777;
+  line-height: 1.5em;
+}
+.footer-inner {
+  width: 850px;
+  margin: auto;
+}
+.sitemap {
+  border-bottom: 1px solid #222;
+  padding-bottom: 20px;
+}
+.sitemap h6 {
+  font-size: 16px;
+  margin: 0;
+  margin-bottom: 20px;
+  font-weight: normal;
+}
+.links {
+
+}
+.items {
+  display: inline-block;
+  width: 33%;
+  vertical-align: top;
+  line-height: 2em;
+}
+.items a {
+  color: #777;
+  display: block;
+}
+.item a:hover {
+  text-decoration: underline;
+}
+.copyright {
+
+}
+.copyright p {
+
+}
